--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "css": "^3.0.0",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "firebase": "^9.10.0",
     "firebase-admin": "^11.0.1",
